{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 30,
  "lineage": "3d3cc5b8-5317-9bcb-75ea-7a9301eff106",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2fa0e512-f70e-430f-9186-1b06543a848e/resourceGroups/Erez1-Candidate/providers/Microsoft.Network/networkSecurityGroups/aks-nsg",
            "location": "westeurope",
            "name": "aks-nsg",
            "resource_group_name": "Erez1-Candidate",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "203.0.113.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowKubernetesAPI",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "203.0.113.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "appgw_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "",
            "destination_port_ranges": [
              "65200-65535"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/2fa0e512-f70e-430f-9186-1b06543a848e/resourceGroups/Erez1-Candidate/providers/Microsoft.Network/networkSecurityGroups/aks-nsg/securityRules/appgw-inbound",
            "name": "appgw-inbound",
            "network_security_group_name": "aks-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "Erez1-Candidate",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "aks_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/2fa0e512-f70e-430f-9186-1b06543a848e/resourceGroups/Erez1-Candidate/providers/Microsoft.Network/virtualNetworks/aks-vnet/subnets/aks-subnet",
            "name": "aks-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Erez1-Candidate",
            "virtual_network_name": "aks-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.devops",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "aks_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2fa0e512-f70e-430f-9186-1b06543a848e/resourceGroups/Erez1-Candidate/providers/Microsoft.Network/virtualNetworks/aks-vnet/subnets/aks-subnet",
            "network_security_group_id": "/subscriptions/2fa0e512-f70e-430f-9186-1b06543a848e/resourceGroups/Erez1-Candidate/providers/Microsoft.Network/networkSecurityGroups/aks-nsg",
            "subnet_id": "/subscriptions/2fa0e512-f70e-430f-9186-1b06543a848e/resourceGroups/Erez1-Candidate/providers/Microsoft.Network/virtualNetworks/aks-vnet/subnets/aks-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.devops",
            "azurerm_subnet.aks_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "706096aa-ac6a-4ba5-a7fd-d512fcb07d06",
            "id": "/subscriptions/2fa0e512-f70e-430f-9186-1b06543a848e/resourceGroups/Erez1-Candidate/providers/Microsoft.Network/virtualNetworks/aks-vnet",
            "location": "westeurope",
            "name": "aks-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "Erez1-Candidate",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/2fa0e512-f70e-430f-9186-1b06543a848e/resourceGroups/Erez1-Candidate/providers/Microsoft.Network/virtualNetworks/aks-vnet/subnets/aks-subnet",
                "name": "aks-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/2fa0e512-f70e-430f-9186-1b06543a848e/resourceGroups/Erez1-Candidate/providers/Microsoft.Network/networkSecurityGroups/aks-nsg"
              },
              {
                "address_prefixes": [
                  "10.0.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/2fa0e512-f70e-430f-9186-1b06543a848e/resourceGroups/Erez1-Candidate/providers/Microsoft.Network/virtualNetworks/aks-vnet/subnets/appgw-subnet",
                "name": "appgw-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.devops"
          ]
        }
      ]
    }
  ]
}